# QR-Cubes

./: fragen.json  pyproject.toml
src/scube/: __main__.py  app.py  app_test.py  aruco.py  question.py  question_test.py  state.py  survey.py  survey_test.py  widgets_test.py
src/scube/voting/: __init__.py  manager.py  manager_test.py  marker.py  processor.py  processor_test.py  question.py  questions.py  questions_test.py  sql.py  sql_test.py  xlsxsaver.py  xlsxsaver_test.py
src/scube/widgets/: __init__.py  camera copy.py  camera.py  camera_options.py  control.py  questions.py  survey_info.py
tools/: calib.npz  calib.py  calib1.npz  calib2.npz  cam.py  cam_opengl.py  cam_test1231.py  cam_valid.py  import.py  missing-cubes.py  precheck.py  report.html.jinja  report.py
